[package]
name = "vchat"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "vchat"
path = "src/main.rs"

[dependencies]
tiny_http  = "0.12"
serde_json = "1"
hmac       = "0.12"
sha2       = "0.10"
base64     = "0.22"

[profile.release]
opt-level     = "z"
lto           = true
strip         = true
panic         = "abort"
codegen-units = 1
